--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,7 +389,8 @@ a {
   @media screen and (max-width: 1280px) {
     #pjax {
       max-width: 800px;
-      margin: 0 auto; } }
+      margin: 0 auto;
+      margin-left: 585px; } }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 400; }
